# eztimator

./: .gitignore  README.md  config.json  config_template.json  main.py  set_pythonpath.py  settings.py  test.txt  test_data_source.txt  test_data_source_generator.py
DataSourceHandlers/: AbstractDataSourceHandler.py  DataBaseDataSourceHandler.py  DataSourceHandlerInterface.py  FileDataSourceHandler.py  HttpDataSourceHandler.py
application/: zoyda_app.py
core/: core_manager.py
modules/aliases/: aliases.py
modules/dtos/: estimated_collection.py  response.py
modules/implementations/bytes_parser/: bytes_parser_cpp.py
modules/implementations/bytes_parser/zparser_lib_cpp/: CMakeLists.txt  build.py  python_interface.cpp
modules/implementations/bytes_parser/zparser_lib_cpp/src/: zparser.cpp  zparser.h
modules/implementations/comparator/: FieldsComparator.py
modules/implementations/config_parser/: JsonConfigParser.py
modules/implementations/cpp_bytes_parser_adapter/: bytes_parser_cpp.py
modules/implementations/cpp_bytes_parser_adapter/zparser_lib_cpp/: CMakeLists.txt  build.py  python_interface.cpp
modules/implementations/cpp_bytes_parser_adapter/zparser_lib_cpp/src/: zparser.cpp  zparser.h
modules/implementations/data_base_gateway/: sqlite3_gateway.py
modules/implementations/data_source_parser/: sourse_data_iterable_parser.py
modules/implementations/error_file_writer/: error_file_writer.py
modules/implementations/estimate_result_printer/: estimate_result_printer.py
modules/implementations/estimator/: structs_estimator.py
modules/implementations/file_parsers/: sourse_data_iterable_parser.py
modules/implementations/source_data_parser/: sourse_data_iterable_parser.py
modules/implementations/zparser_lib_cpp/: TempParser.py  python_interface.cpp
modules/implementations/zparser_lib_cpp/src/: zparser.cpp
modules/interfaces/: bytes_parser_interface.py  config_parser_interface.py  data_base_gateway_interface.py  data_base_service_interface.py  data_source_parser_interface.py  error_handler_interface.py  estimate_result_printer_interface.py  estimator_interface.py  http_gateway_interface.py  http_service_interface.py  source_data_iterable_parser_interface.py
zparser/: build.py  main.cpp
zparser_lib_cpp/: CMakeLists.txt  build.py  python_interface.cpp
zparser_lib_cpp/src/: zparser.cpp  zparser.h
